feat: edit errors

--- a/index.html
+++ b/index.html
@@ -376,14 +376,13 @@
                         <li class="item">
                             <span class="skills-content">Russian - C2</span>
                         </li>
-
-
                     </ul>
                 </div>
+            </div>
         </aside>
         <div class="content">
             <h2 class="name" id="about"><img src="https://github.com/blackcater/blackcater/raw/main/images/Hi.gif"
-                                             height="50"/>
+                                             height="50" alt="hi">
                 Yauhen Klimovich</h2>
             <h2 class="profession">Front-end developer</h2>
             <p class="description">
