feat: edit html , add contacts

--- a/index.html
+++ b/index.html
@@ -299,7 +299,9 @@
                     <h3 class="contacts-title">Contacts</h3><br>
                     <div>
                         <a class="contacts-url" href="mailto:udjenkl@icloud.com">udjenkl@icloud.com</a>
-                        <a class="contacts-url" href="mailto:webrubin1987@gmail.com">webrubin1987@gmail.com</a>
+                    </div>
+                    <div>
+                        <a class="contacts-url" href="#">Udjen#2712 (Discord)</a>
                     </div>
                     <div>
                         <a class="contacts-url" href="https://t.me/username">YauhenKL (Telegram)</a>
@@ -350,16 +352,16 @@
                     <h3 class="skills-title">Main qualities:</h3>
                     <ul>
                         <li class="item">
-                            <span class="skills-content">discipline</span>
+                            <span class="skills-content">Discipline</span>
                         </li>
                         <li class="item">
-                            <span class="skills-content">meeting deadlines</span>
+                            <span class="skills-content">Meeting deadlines</span>
                         </li>
                         <li class="item">
-                            <span class="skills-content">analytic skills</span>
+                            <span class="skills-content">Analytic skills</span>
                         </li>
                         <li class="item">
-                            <span class="skills-content">focus on results</span>
+                            <span class="skills-content">Focus on results</span>
                         </li>
                         <li class="item">
                             <span class="skills-content">Desire to learn new technologies and tools.</span>
