feat: new project

--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
 
                     </li>
                     <li class="projects-item card">
-                        <a class="url-project" href="https://shop-js-olive.vercel.app/"><img
+                        <a class="url-project" href="http://24.199.110.91:3000/"><img
                                 src="./img/project_02.jpg" alt="project"></a>
                         <h2><b>[</b><span class="tech-name">Online Magazine HTML</span><b>]</b></h2>
                     </li>
