--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
                     <li class="projects-item card">
                         <a class="url-project" href="http://24.199.110.91:3000/"><img
                                 src="./img/project_02.jpg" alt="project"></a>
-                        <h2><b>[</b><span class="tech-name">Online Magazine HTML</span><b>]</b></h2>
+                        <h2><b>[</b><span class="tech-name">Online Magazine MERN</span><b>]</b></h2>
                     </li>
                     <li class="projects-item card">
                         <a class="url-project" href="https://udjenkl.github.io/beautiful-slider/"><img
