feat: add sertificate block

--- a/index.html
+++ b/index.html
@@ -436,7 +436,13 @@ return result;
                     </code>
                     </pre>
             </div>
+            <div class="certificate">
+                <img src="img/certificate/rss0.jpg" alt="Certificate of Completion">
+                <img src="img/certificate/myitschool.jpg" alt="Certificate of Completion">
+                <img src="img/certificate/udemy.jpg" alt="Certificate of Completion">
+            </div>
         </div>
+
     </main>
     <footer class="footer">
         <a href="https://rs.school/js/"><img src="./img/rs_school_js.svg" alt="rsschool"></a>
