--- a/index.html
+++ b/index.html
@@ -437,9 +437,9 @@ return result;
                     </pre>
             </div>
             <div class="certificate">
-                <img src="img/certificate/rss0.jpg" alt="Certificate of Completion">
-                <img src="img/certificate/myitschool.jpg" alt="Certificate of Completion">
-                <img src="img/certificate/udemy.jpg" alt="Certificate of Completion">
+                <img src="./img/certificate/rss0.jpg" alt="Certificate of Completion">
+                <img src="./img/certificate/myitschool.jpg" alt="Certificate of Completion">
+                <img src="./img/certificate/udemy.jpg" alt="Certificate of Completion">
             </div>
         </div>
 
