--- a/index.html
+++ b/index.html
@@ -288,6 +288,29 @@
                 width: 346px;
             }
         }
+        @media (max-width: 393px) {
+            .cv {
+                margin-left: 25px;
+            }
+
+            .cv .main .aside .avatar {
+                /*border-radius: 80px;*/
+            }
+            .aside {
+                padding-right: 20px;
+                padding-left: 15px;
+                padding-top: 15px;
+                width: 100%;
+
+            }
+            .content {
+                margin-left: 0;
+                margin-right: 0;
+                width: 100%;
+
+            }
+        }
+
 
         @media (max-width: 375px) {
             .cv {
