--- a/index.html
+++ b/index.html
@@ -136,16 +136,14 @@
         }
 
         @media (max-width: 425px) {
-            .cv {
-                margin: 0 auto;
-            }
+
             .content {
-                margin-left: 0;
+                margin-left: 16px;
                 margin-right: 0;
                 width: 100%;
             }
             .aside {
-                padding-right:15px;
+                padding-right:16px;
                 padding-left: 15px;
                 padding-top: 15px;
                 width: 100%;
@@ -153,11 +151,6 @@
             .cv .main .aside .avatar {
                 border-radius: 80px;
             }
-
-            .header {
-                width: 346px;
-            }
-
             header .name {
                 font-size: 30px;
             }
@@ -210,13 +203,9 @@
                 height: 15px;
             }
 
-            .aside {
-                width: 130px;
-                padding-right: 5px;
-            }
 
             .aside img {
-                width: 100px;
+                width: 100%;
             }
 
             .nav {
@@ -265,25 +254,17 @@
             .tech-name {
                 font-size: 12px;
             }
-            /*img[alt='project'][src^='./img/project_'] {*/
-            /*    width: 100%;*/
-            /*    height: auto;*/
-            /*}*/
             .code-example.card {
                 width: 200px;
                 padding-left: 8px;
             }
-
             pre {
-                /*overflow: scroll;*/
                 white-space: pre-wrap;
             }
-
             .certificate img {
                 width: 100%;
                 height: 100%;
             }
-
             .footer {
                 width: 346px;
             }
