--- a/index.html
+++ b/index.html
@@ -136,21 +136,27 @@
         }
 
         @media (max-width: 425px) {
+            .header {
+                width: 345px;
+            }
 
             .content {
                 margin-left: 16px;
                 margin-right: 0;
                 width: 100%;
             }
+
             .aside {
-                padding-right:16px;
+                padding-right: 16px;
                 padding-left: 15px;
                 padding-top: 15px;
                 width: 100%;
             }
+
             .cv .main .aside .avatar {
                 border-radius: 80px;
             }
+
             header .name {
                 font-size: 30px;
             }
@@ -251,32 +257,43 @@
             .skills-title {
                 font-size: 17px;
             }
+
             .tech-name {
                 font-size: 12px;
             }
+
             .code-example.card {
                 width: 200px;
                 padding-left: 8px;
             }
+
             pre {
                 white-space: pre-wrap;
             }
+
             .certificate img {
                 width: 100%;
                 height: 100%;
             }
+
             .footer {
                 width: 346px;
             }
         }
+
         @media (max-width: 393px) {
             .cv {
                 margin-left: 25px;
             }
 
+            .header {
+                width: 345px;
+            }
+
             .cv .main .aside .avatar {
                 /*border-radius: 80px;*/
             }
+
             .aside {
                 padding-right: 20px;
                 padding-left: 15px;
@@ -284,6 +301,7 @@
                 width: 100%;
 
             }
+
             .content {
                 margin-left: 0;
                 margin-right: 0;
@@ -291,16 +309,20 @@
 
             }
         }
-
 
         @media (max-width: 375px) {
             .cv {
                 margin-left: 15px;
             }
 
+            .header {
+                width: 345px;
+            }
+
             .cv .main .aside .avatar {
                 border-radius: 80px;
             }
+
             .aside {
                 padding-right: 20px;
                 padding-left: 15px;
@@ -308,17 +330,24 @@
                 width: 100%;
 
             }
+
             .content {
                 margin-left: 0;
                 margin-right: 0;
-               width: 100%;
+                width: 100%;
 
             }
         }
 
         @media (max-width: 320px) {
+
             .cv {
-                margin-left: 1px;
+                margin-left: 0;
+                margin-top: 0;
+            }
+
+            .header {
+                width: 350px;
             }
 
             .footer h4 {
