--- a/index.html
+++ b/index.html
@@ -376,6 +376,7 @@
             <img class="avatar" src="img/ava.jpg" alt="My photo">
             <div class="aside-main">
                 <div class="contacts">
+                    <br>
                     <h3 class="contacts-title">Contacts</h3><br>
                     <div>
                         <a class="contacts-url" href="mailto:udjenkl@icloud.com">udjenkl@icloud.com</a>
@@ -384,7 +385,10 @@
                         <a class="contacts-url" href="#">Udjen#2712 (Discord)</a>
                     </div>
                     <div>
-                        <a class="contacts-url" href="https://t.me/username">YauhenKL (Telegram)</a>
+                        <a class="contacts-url" href="https://t.me/Undefined">Undefined (Telegram)</a>
+                    </div>
+                    <div>
+                        <a class="contacts-url" href="https://www.linkedin.com/in/udjenkl/">udjenkl (LinkedIn)</a>
                     </div>
                     <div>
                         <a class="contacts-url" href="https://github.com/UdjenKL">GitHub</a>
