--- a/index.html
+++ b/index.html
@@ -9,25 +9,24 @@
     <link href="style/styles.css" rel="stylesheet">
     <title>Document</title>
     <style>
-
         @media (max-width: 2560px) {
             .aside {
-                width: 620px;
+                max-width: 620px;
             }
 
             .aside img {
-                width: 600px;
+                max-width: 600px;
             }
 
             .content {
-                width: 1200px;
+                max-width: 1800px;
                 margin: 0 auto;
             }
         }
 
         @media (max-width: 1920px) {
             .aside {
-                width: 450px;
+                max-width: 450px;
             }
 
             .aside img {
@@ -35,7 +34,7 @@
             }
 
             .content {
-                width: 1450px;
+                max-width: 1450px;
                 margin: 0 auto;
             }
         }
@@ -50,7 +49,7 @@
             }
 
             .content {
-                width: 1450px;
+                max-width: 100%;
                 margin-right: 0;
                 margin-left: 0;
             }
@@ -63,15 +62,20 @@
 
         @media (max-width: 1024px) {
             .aside {
-                width: 270px;
+                max-width: 270px;
             }
 
             .aside img {
-                width: 250px;
+                max-width: 250px;
             }
 
             .content {
-                width: 514px;
+                max-width: 1024px;
+                background: white;
+            }
+
+            .content .description {
+                padding-bottom: 20px;
             }
 
             code {
@@ -88,17 +92,24 @@
             }
         }
 
+        @media (max-width: 850px) {
+            .card:nth-child(5) {
+                display: none;
+            }
+        }
+
         @media (max-width: 768px) {
             .aside {
-                width: 210px;
+                max-width: 210px;
             }
 
             .aside img {
-                width: 190px;
+                max-width: 190px;
             }
 
             .content {
-                width: 400px;
+                background: white;
+                max-width: 900px;
                 margin-left: 0;
                 margin-right: 0;
                 padding-left: 25px;
@@ -136,9 +147,7 @@
         }
 
         @media (max-width: 425px) {
-            .header {
-                width: 345px;
-            }
+
 
             .content {
                 margin-left: 16px;
@@ -214,10 +223,6 @@
                 width: 100%;
             }
 
-            .nav {
-                width: 346px;
-                padding-left: 50px;
-            }
 
             .nav a {
                 font-size: 15px;
@@ -277,23 +282,22 @@
             }
 
             .footer {
-                width: 346px;
+                max-width: 425px;
             }
         }
 
         @media (max-width: 393px) {
             .cv {
-                margin-left: 25px;
+                margin-left: 0;
             }
 
             .header {
-                width: 345px;
+                max-width: 393px;
             }
 
-            .cv .main .aside .avatar {
-                /*border-radius: 80px;*/
-            }
-
+            /*.nav {*/
+            /*    max-width: 393px;*/
+            /*}*/
             .aside {
                 padding-right: 20px;
                 padding-left: 15px;
@@ -312,11 +316,15 @@
 
         @media (max-width: 379px) {
             .cv {
-                margin-left: 15px;
+                max-width: 379px;
             }
 
             .header {
-                width: 345px;
+                max-width: 379px;
+            }
+
+            .nav {
+                max-width: em;
             }
 
             .cv .main .aside .avatar {
@@ -334,27 +342,61 @@
             .content {
                 margin-left: 0;
                 margin-right: 0;
-                width: 100%;
+                max-width: 100%;
 
+            }
+
+            .description {
+                margin-right: 5px;
+            }
+
+            .footer {
+                max-width: 379px;
             }
         }
 
         @media (max-width: 320px) {
 
-            .cv {
-                margin-left: 0;
-                margin-top: 0;
+            .nav {
+                margin: 0 auto;
+                max-width: 100%;
+            }
+            .nav a {
+                font-size: 15px;
+                padding-right: 4px;
+                padding-left: 0;
+                margin-right: 18px;
+                margin-left: 20px
+            }
+            .content .name {
+                max-width:128px;
+                line-height: 30px;
+                font-size: 10px;
+            }
+            .content img {
+                width: 100px;
+                height: auto;
+            }
+            .header {
+                max-width: 100%;
             }
 
-            .header {
-                width: 350px;
+            .content {
+                max-width: 180px;
+                padding-left: 10px;
+                padding-right: 10px;
+            }
+            .content p {
+                max-width: 130px;
+            }
+            .footer {
+                max-width: 320px;
             }
 
             .footer h4 {
                 font-size: 12px;
             }
         }
-
     </style>
 </head>
 
@@ -509,16 +551,24 @@
             <div class="code-example card" id="code">
                 <h2>Code Example</h2>
                 <pre>
-                        <code>
-function removeEveryOther(arr) {
-let result = [];
-result = arr.filter((item, index) =>
-(index+1) % 2);
-console.log(result);
-return result;
+<code>
+
+<span class="blue">function</span> hexRandomColor () {
+
+<span class="blue">const</span> hexCodes = <span class="orange">'0123456789ABCDEF'</span>
+
+<span class="blue">let</span> color = ""
+
+<span class="violet">for</span> (<span class="blue">let</span> i = 0; i &lt; 6; i++) {
+
+color += <span class="blue">hexCodes</span>[Math.<span class="yellow">floor</span>(Math.<span
+        class="yellow">random</span>() * <span class="blue">hexCodes.length</span>)]
+
 }
-                    </code>
-                    </pre>
+
+<span class="violet">return</span> '#' + color
+
+} </code></pre>
             </div>
             <div class="certificate">
                 <img src="./img/certificate/rss0.jpg" alt="Certificate of Completion">
@@ -531,11 +581,9 @@ return result;
     <footer class="footer">
         <a href="https://rs.school/js/"><img src="img/rss.svg" alt="rsschool"></a>
         <h4>Yauhen Klimovich 2022</h4>
-        <a href="https://github.com/UdjenKL"><img src="img/git.svg"
-                                                  alt="git"></a>
+        <a href="https://github.com/UdjenKL"><img src="img/git.svg" alt="git"></a>
     </footer>
 </div>
-
 </body>
 
 </html>
