--- a/index.html
+++ b/index.html
@@ -345,6 +345,15 @@
                 max-width: 100%;
 
             }
+            .content .name {
+                max-width:138px;
+                line-height: 30px;
+                font-size: 10px;
+            }
+            .content img {
+                width: 100px;
+                height: auto;
+            }
 
             .description {
                 margin-right: 5px;
