--- a/index.html
+++ b/index.html
@@ -154,6 +154,10 @@
                 margin-right: 0;
                 width: 100%;
             }
+            .content img {
+                width: 160px;
+                height: auto;
+            }
 
             .aside {
                 padding-right: 16px;
@@ -213,10 +217,6 @@
                 font-size: 5px;
             }
 
-            .content img {
-                width: 15px;
-                height: 15px;
-            }
 
 
             .aside img {
@@ -323,9 +323,6 @@
                 max-width: 379px;
             }
 
-            .nav {
-                max-width: em;
-            }
 
             .cv .main .aside .avatar {
                 border-radius: 80px;
@@ -350,8 +347,8 @@
                 line-height: 30px;
                 font-size: 10px;
             }
-            .content img {
-                width: 100px;
+            .projects img {
+                width: 160px;
                 height: auto;
             }
 
