feat: add shelter

--- a/index.html
+++ b/index.html
@@ -552,6 +552,11 @@
                                 src="img/progects/project_04.jpg" alt="project"></a>
                         <h2><b>[</b><span class="tech-name">HTML5, CSS , JavaScript ❤️</span><b>]</b></h2>
                     </li>
+                    <li class="projects-item card">
+                        <a class="url-project" href="https://rolling-scopes-school.github.io/udjenkl-JSFE2023Q1/shelter/"><img
+                                src="img/progects/project_05.jpg" alt="project"></a>
+                        <h2><b>[</b><span class="tech-name">Shelter</span><b>]</b></h2>
+                    </li>
                 </ul>
             </div>
             <div class="code-example card" id="code">
