feat: edit card code

--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
         }
 
         @media (max-width: 850px) {
-            .card:nth-child(5) {
-                display: none;
+            .code-example {
+                display:none;
             }
         }
 
