--- a/index.html
+++ b/index.html
@@ -662,6 +662,7 @@ color += <span class="blue">hexCodes</span>[Math.<span class="yellow">floor</spa
 } </code></pre>
             </div>
             <div class="certificate">
+                <img src="./img/certificate/bsuir.jpg" alt="Certificate of Completion">
                 <img src="./img/certificate/rss0.jpg" alt="Certificate of Completion">
                 <img src="./img/certificate/myitschool.jpg" alt="Certificate of Completion">
                 <img src="./img/certificate/udemy.jpg" alt="Certificate of Completion">
