--- a/index.html
+++ b/index.html
@@ -633,7 +633,7 @@
                     </li>
                     <li class="projects-item card">
                         <a class="url-project"
-                           href="https://rolling-scopes-school.github.io/udjenkl-JSFE2023Q1/shelter/"><img
+                           href="https://udjenkl.github.io/Our-friends/"><img
                                 src="img/progects/project_05.jpg" alt="project"></a>
                         <h2><b>[</b><span class="tech-name">Shelter</span><b>]</b></h2>
                     </li>
